# hikari

./: .gitignore  .rusty-hook.toml  Cargo.toml  Cross.toml  LICENSE  README.md  build.sh  config.toml  database.sql  docker-compose.yaml  example.json  example_config.toml  generate_keypair.sh  log4rs.yaml  node.toml  rustfmt.toml  shell.nix
.sqlx/: query-002c7a3648812e44aefb72b3a8605e5b883cd59e76286b991f0496dc32245769.json  query-00ec085b431fad1d89deeead015f11bf249cfb95b1f775d021936898e13af91a.json  query-0e131eac4d9d01ed9e9ca5568f83ea570a08a3b96d1ab77b6a9548d199ba6150.json  query-198bae6f823bf05483ffb00a43b5937773c57d6ce0a2d407202cbe61393a1923.json  query-1a6d0c53be4c7c9f09dbcf33f0a3d43acef9a8225db01b41751300b54def29df.json  query-323364f5b8817e9f6a1ee904c424d256e78a6d47125f879dcbba02e308497af3.json  query-39e66b20a7dc202bbe52202e701664725f4150d67ba72ed03f39114221569871.json  query-624c71775f7b042dfd11de023de232c36082666bb00857634967645b57466630.json  query-6765e39926688311a2dfbae2379c0c93ad3436de70bd6e26b886d41a6bff446b.json  query-801d754bba0e9d31e74b702967e4c0be8fed2983d334a0b38bac3b215e35274d.json  query-828c99259a222bbd0e418eb6244accdacbca93ca49ab5978bcfb9e78ba76cb40.json  query-8385ef9270856d06c5f5afbaa3ec24a0611ff00e79fa91350f2275be27a4ee28.json  query-8fd9997d0f09dd454e6d6b9e47d2a2c166de6c722c6a20849cebc0c2824f5441.json  query-946df6a2a8c5ba8ea8d7ddb6c7649a4cc77e256f48557d3a02b5e6706bb129b3.json  query-95625ff4afc868009813774837f59cca846d3f9f188db73098608192f54db9f5.json  query-a980c483c4a220da20cb79dbd5b7329a951e0ae8cd3b3b7b7d250918fcd6ccac.json  query-b23a957b9eee98f2e7902f598a4bd8465634e2ec14d114bb0f5256be6461420b.json  query-b6704cf38d965c25de1cc1016aa99fe6c30115e09e061729a854822760275d70.json  query-b6b7cdcea6524991fdd85798b6aa3a9083f7cc2d8721f5604a3ab90e6dd89807.json  query-b8856737edd591e77601d9aeae28785351cf1c11f854c3bedffd0a25ec4e1a5f.json  query-c9bd94fbb9377feb7523d27af0f2c0a7cc08c870638316b6918373fe082e7be9.json  query-cd72db66e102249dc8cdcb4a2512bd5464472c9d4c0f6fa6bcc20c288c3d3858.json  query-ce3ef0a55fe85c254a8c3a27e71018d2d2ee37998c86d455e6d8325c38b1b01f.json  query-cf17d3e196b4820c88659f6b51e68e0493d20570b311ac912812a0fcf41f5d69.json  query-ec56cff674fa1cacfde751f4e34a5b47b161dfcb3fda02d7319e9714ad35560a.json  query-fe8d3434a458a9e8335b0967e468c0aa68b7c7103a878ead72c4b6306f88a6b6.json
bruno-collection/: bruno.json
bruno-collection/container/: deleteContainer.bru  folder.bru  getContainer.bru  getContainers.bru  postContainer.bru  updateContainer.bru
bruno-collection/deployment/: deleteDeployment copy.bru  deleteDeployment.bru  folder.bru  getDeployment.bru  getDeployments.bru  postDeployment.bru  updateDeployment.bru
bruno-collection/hikari/: folder.bru  (+2 more)
src/: main.rs
(+41 files in other folders)
