[package]
name = "hikari"
version = "1.1.0-alpha"
edition = "2021"
authors = ["Kalyan Mudumby"]
description = ""
repository = "https://github.com/theinhumaneme/hikari"
rust-version = "1.80.0"
readme = "README.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dotenvy = "0.15.7"
openssl = { version = "0.10.68", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.3"
toml = "0.8.19"

[profile.dev]
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
