[package]
name = "hikari"
version = "1.3.2"
edition = "2024"
authors = ["Kalyan Mudumby"]
description = "Rule all your VMs handsfree with hikari - A lightweight deployment manager, A highly configurable node specific deployment solution."
repository = "https://github.com/theinhumaneme/hikari"
rust-version = "1.85.0"
readme = "README.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dotenvy = "0.15.7"
openssl = { version = "0.10.68", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.3"
toml = "0.8.19"

[profile.dev]
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
